--- a/간단한자기소개서sourcecode/sourcecode/css/style.css
+++ b/간단한자기소개서sourcecode/sourcecode/css/style.css
@@ -106,10 +106,10 @@ ul li:nth-child(2)::before {
     content: url('../images/ico_email.png');
 }
 ul li:nth-child(3)::before {
-    content: url('../images/ico_facebook.png');
+    content: url('../images/ico_instagram.png');
 }
 ul li:nth-child(4)::before {
-    content: url('../images/ico_blog.png');
+    content: url('../images/ico_github.png');
 }
 
 #skill ol {
